# RustyBerryOS

./: LICENSE  README.md
rusty_berry_os/: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
rusty_berry_os/common/: operating_system.mk
rusty_berry_os/common/serial/: minipush.rb  miniterm.rb
rusty_berry_os/common/serial/minipush/: progressbar_patch.rb
rusty_berry_os/src/: bsp.rs  console.rs  cpu.rs  driver.rs  exception.rs  main.rs  memory.rs  panic_wait.rs  print.rs  state.rs  synchronization.rs  time.rs
rusty_berry_os/src/_arch/aarch64/: cpu.rs  exception.rs  time.rs
rusty_berry_os/src/_arch/aarch64/cpu/: boot.rs  boot.s  smp.rs
rusty_berry_os/src/_arch/aarch64/memory/mmu/: translation_table.rs
rusty_berry_os/src/bsp/: device_driver.rs  raspberrypi.rs
rusty_berry_os/src/bsp/device_driver/: arm.rs  bcm.rs  common.rs
rusty_berry_os/src/bsp/device_driver/arm/: gicv2.rs
rusty_berry_os/src/bsp/device_driver/bcm/: bcm2837_gpio.rs  bcm2837_pl011_uart.rs  bcm2xxx_gpio.rs  bcm2xxx_interrupt_controller.rs  bcm2xxx_pl011_uart.rs
rusty_berry_os/src/bsp/raspberrypi/: console.rs  driver.rs  kernel.ld  memory.rs
rusty_berry_os/src/bsp/raspberrypi/exception/: asynchronous.rs
rusty_berry_os/src/bsp/raspberrypi/memory/: mmu.rs
rusty_berry_os/src/console/: null_console.rs
rusty_berry_os/src/cpu/: smp.rs
rusty_berry_os/src/exception/: asynchronous.rs
rusty_berry_os/src/memory/: mmu.rs
rusty_berry_os/src/memory/mmu/: translation_table.rs  types.rs
rusty_berry_os/tools/translation_table_tool/: arch.rb  bsp.rb  generic.rb  kernel_elf.rb  main.rb
(+2 files in other folders)
