[package]
name = "rusty_berry_os"
version = "0.1.0"
edition = "2021"
authors = [
  "Patryk Zajdel <zajdel0202@gmail.com>",
  "Dominik Puz <dominikus.puz@gmail.com>",
]

[features]
default = []
bsp_rpi3 = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }